Comment out currently unimplemented stuff on the page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500"></svg>
-	<div>
+	<!--div>
 		Fill
 	<select id="color_select">
-  <!--option value="none">none</option-->
+  <option value="none">none</option>
   <option value="black">black</option>
   <option value="white">white</option>
   <option value="red">red</option>
@@ -17,9 +17,8 @@
   <option value="blue">blue</option>
   <option value="purple">purple</option>
 </select>
-</div>
+</div-->
 	<script src="./script/api.js"></script>
   <script src="./script/main.js"></script>
-  <script src="./script/edit_session.js"></script>
 
 </body></html>
