Multiple editing sessions

--- a/index.html
+++ b/index.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
   <link rel="stylesheet" href="./style/style.css"> 
-<!--   <link rel="stylesheet" href="./style/outlines.css"> -->
+  <link rel="stylesheet" media="all and (orientation:portrait)" href="./style/vert.css"> 
+
+  <link rel="stylesheet" href="./style/outlines.css">
 
 </head>
 <body>
-  <div class="sessions">
-    <div class="edit_session">
-      <div class="toolbar">
-        <button class="crosshair selected">✏</button>
-        <button class="clear">🤚</button>
-        <button class="clear">💣</button>
-      </div>
-      <div class="viewbox">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-250 -250 750 750"></svg>
-      </div>
-    </div>
-    <div class="column toolbar">
-      <button class="l_arrow">←</button>
-      <button class="r_arrow">→</button>
-    </div>
-    <div class="edit_session">
-      <div class="toolbar">
-        <button class="crosshair selected">✏</button>
-        <button class="clear">🤚</button>
-        <button class="clear">💣</button>
 
+  <div>
+    <div class="sessions">
+      <div class="edit_session">
+        <div class="toolbar">
+          <button class="crosshair selected">✏</button>
+          <button class="move">🤚</button>
+          <button class="clear" onclick="api.clear(svg)">💣</button>
+        </div>
+        <div class="viewbox">
+          <input type="text">
+          <select size="3" class="names">
+          </select>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-250 -250 750 750" preserveAspectRatio="xMidYMid meet"></svg>
+        </div>
       </div>
-      <div class="viewbox">
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="-250 -250 750 750"></svg> -->
+      <div class="mid toolbar">
+        <button class="l_arrow">←</button>
+        <button class="r_arrow">→</button>
       </div>
+      <div class="edit_session">
+        <div class="toolbar">
+          <button class="crosshair selected">✏</button>
+          <button class="move">🤚</button>
+          <button class="clear">💣</button>
+
+        </div>
+        <div class="viewbox">
+                    <input type="text">
+          <select size="3" class="names">
+          </select>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-250 -250 750 750"></svg>
+        </div>
+      </div>
+
     </div>
-    
+    <div height="100%"></div>
   </div>
-    <script src="./script/api.js"></script> 
-    <script src="./script/main.js"></script>
+  <script src="./script/api.js"></script> 
+<!--   <script src="./api/test_api.js"></script>  -->
+  <script src="./script/main.js"></script>
 </body></html>
