Clear button functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="./style/style.css"> 
   <link rel="stylesheet" media="all and (orientation:portrait)" href="./style/vert.css"> 
 
-  <link rel="stylesheet" href="./style/outlines.css">
+  <!-- <link rel="stylesheet" href="./style/outlines.css"> -->
 
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="toolbar">
           <button class="crosshair selected">✏</button>
           <button class="move">🤚</button>
-          <button class="clear" onclick="api.clear(svg)">💣</button>
+          <button class="clear">💣</button>
         </div>
         <div class="viewbox">
           <input type="text">
